[package]
name = "extract_prc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adobe-cmap-parser = "0.3.3"
clap = "4.2.4"
encoding = "0.2.33"
euclid = "0.20.5"
linked-hash-map = "=0.5.3"
lopdf = { version = "0.29", default-features = false, features = ["pom_parser"] }
pdf = "0.8.1"
postscript = "0.14"
shellexpand = "3.1.0"
type1-encoding-parser = "0.1.0"
unicode-normalization = "0.1.19"
